another try on mobile fix

--- a/frontend/sass/base/_base.scss
+++ b/frontend/sass/base/_base.scss
@@ -11,10 +11,6 @@ html {
 }
 
 body {
-   overflow-x: hidden;
-}
-
-body {
    box-sizing: border-box;
-   padding: 0 3rem 0 3rem;
+   overflow-x: hidden;
 }
