--- a/frontend/sass/base/_typography.scss
+++ b/frontend/sass/base/_typography.scss
@@ -4,10 +4,11 @@ body {
    /* font-size: 16px; */
    line-height: 1.7;
    color: $color-grey-dark;
+   padding: 0 3rem;
 }
 
 @media screen and (max-width: 1000px) {
-   .body {
-      padding: 0 1.2rem 0 1.2rem;
+   body {
+      padding: 0 1.2rem;
    }
 }
