--- a/frontend/sass/components/_nav.scss
+++ b/frontend/sass/components/_nav.scss
@@ -64,7 +64,7 @@
    display: none;
    position: absolute;
    z-index: 3;
-   right: 32px;
+   right: 20px;
    top: 27px;
    cursor: pointer;
    transition: all 0.4s ease-out;
